Fixed display on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,3 +157,37 @@ html, body {
 .table-taken {
     background-image: url(../img/tablered.png)
 }
+
+/* Re arrange panels for displays where the menu is bigger than the panel (screen < 700px) */
+@media screen and (max-width: 700px)
+{
+    .container, .row {
+        height: 100%;
+    }
+    #menu {
+        display: block;
+        position: absolute;
+        overflow: hidden;
+        left: 0;
+        top: calc(100% - 270px);
+        width: 100%;
+        height: 270px;
+        margin: 0;
+        background-color: rgb(230, 230, 230);
+        z-index: 10;
+        box-shadow: 0 0 15px rgb(90, 90, 90);
+    }
+    #content-container {
+        display: block;
+        position: fixed;
+        left: 00px;
+        list-style-type: none;
+        top: 70px;
+        width: 100%;
+        height: calc(100% - 270px);
+        overflow: hidden;
+        background-color: whitesmoke;
+        box-shadow: 0 0 10px black;
+        border-right: rgb(170, 170, 170);
+    }   
+}
